--- a/.gitignore
+++ b/.gitignore
@@ -157,4 +157,23 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
+
+# Ignorar archivos generados por la compilación de LaTeX
+*.aux
+*.log
+*.out
+*.toc
+*.lof
+*.lot
+*.gz
+*.bbl
+*.blg
+
+# Ignorar archivos y carpetas generados por editores y sistemas operativos
+.vscode/
+.idea/
+*.bak
+*.swp
+.DS_Store
+Thumbs.db
